Bug 355872 - svg icons in konqueror not displayed
Summary: svg icons in konqueror not displayed
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.14.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 106674 300879 332707 366678 379132 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-11-25 00:49 UTC by Axel Braun
Modified: 2017-08-27 18:12 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.37.0
Sentry Crash Report:


Attachments
screenshot (64.54 KB, image/png)
2015-11-25 11:24 UTC, Axel Braun
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Axel Braun 2015-11-25 00:49:04 UTC
Konqueror's home page has 4 icons - in breeze theme they are just displayed as black boxes.
In Oxygen they seem to work,
See: https://forums.opensuse.org/showthread.php/511251-What-lib-does-Leap-need-to-display-svg-icons

Reproducible: Always

Steps to Reproduce:
1. start konqueror with breeze theme
2.
3.
Comment 1 Marco Martin 2015-11-25 09:49:08 UTC
Screenshot would be needed
Comment 2 Axel Braun 2015-11-25 11:24:53 UTC
Created attachment 95728 [details]
screenshot
Comment 3 Uri Herrera 2015-11-25 16:53:44 UTC
Add a screenshot of Oxygen the icons that Konqueror uses.
Comment 4 andreas 2016-02-29 23:26:47 UTC
It look like konqueror can't show svg files cause the icons are available but in svg.
Comment 5 andreas 2016-05-28 00:30:21 UTC
should be fixed in conqueror cause the icons are available in svg.
Comment 6 Burkhard Lück 2016-08-16 15:33:35 UTC
*** Bug 366678 has been marked as a duplicate of this bug. ***
Comment 7 Roberto Castagnola 2017-03-04 13:45:10 UTC
Same issue on Fedora 25 (konqueror version 4.14.25) and on Gentoo (konqueror version 5.0.97)
With Right click -> Show Image, the icon is shown correctly.
Comment 8 Wolfgang Bauer 2017-07-10 19:06:18 UTC
The problem is that khtml doesn't support SVG files.

This will fix it:
https://phabricator.kde.org/D6606

Unfortunately I'm unable to push it currently because I cannot reach the git server.
But I suppose I'll manage until 5.37... ;-)
Comment 9 Wolfgang Bauer 2017-07-11 11:13:33 UTC
Git commit ed5c039f2d1996545b95a24e9bff4264144f9f6d by Wolfgang Bauer.
Committed on 11/07/2017 at 10:53.
Pushed by wbauer into branch 'master'.

Support SVG too

Konqueror's about page doesn't show icons if the breeze icon theme is
used.
The reason is that khtml doesn't support SVG images.
This patch is supposed to fix it by allowing to use Qt's support in that
case.
FIXED-IN: 5.37.0
Differential Revision: https://phabricator.kde.org/D6606

M  +1    -1    src/imload/decoders/qimageioloader.cpp

https://commits.kde.org/khtml/ed5c039f2d1996545b95a24e9bff4264144f9f6d
Comment 10 Axel Braun 2017-07-11 11:15:42 UTC
Wolfgang, you are the hero of the day!
Comment 11 Wolfgang Bauer 2017-07-11 12:27:38 UTC
Git commit 71c3b3f779c815d5b1c0a87e6d09dadefd6b7409 by Wolfgang Bauer.
Committed on 11/07/2017 at 12:25.
Pushed by wbauer into branch 'KDE/4.14'.

Support SVG too

Konqueror's about page doesn't show icons if the breeze icon theme is
used.
The reason is that khtml doesn't support SVG images.
This patch is supposed to fix it by allowing to use Qt's support in that
case.

This is a backport of commit ed5c039f2d1996545b95a24e9bff4264144f9f6d
in khtml

FIXED-IN: 4.14.35

M  +1    -1    khtml/imload/decoders/qimageioloader.cpp

https://commits.kde.org/kdelibs/71c3b3f779c815d5b1c0a87e6d09dadefd6b7409
Comment 12 Wolfgang Bauer 2017-07-18 09:42:10 UTC
*** Bug 379132 has been marked as a duplicate of this bug. ***
Comment 13 Unknown 2017-07-19 18:13:44 UTC
Error is again present under Plasma5
Konqueror version 5.0.97 at:
KDE Frameworks 5.36.0
Qt 5.9.1 (compiled against 5.9.1
Distribution Arch 64 Bit current

Excuse me for resurrection
Comment 14 Unknown 2017-07-19 18:15:27 UTC
I forgot, use webengine
Comment 15 Wolfgang Bauer 2017-07-20 16:47:34 UTC
(In reply to 1212 from comment #13)
> Error is again present under Plasma5

Of course it is.
The fix will be in KDE Frameworks 5.37.0 (to be released at the beginning of August), as you can see in the "FIXED-IN" field.

(In reply to 1212 from comment #14)
> I forgot, use webengine

That's irrelevant, Konqueror (currently) uses KHTML to display the introduction page in any case.
Comment 16 Wolfgang Bauer 2017-07-20 16:49:14 UTC
(In reply to Wolfgang Bauer from comment #15)
> The fix will be in KDE Frameworks 5.37.0 (to be released at the beginning of
> August), as you can see in the "FIXED-IN" field.

Unless your distribution backports the fix earlier of course.
Comment 17 Unknown 2017-07-20 18:15:45 UTC
Thank you for the effort.

gretting
Comment 18 Andrea Iacovitti 2017-08-27 07:52:59 UTC
*** Bug 106674 has been marked as a duplicate of this bug. ***
Comment 19 Andrea Iacovitti 2017-08-27 07:53:50 UTC
*** Bug 300879 has been marked as a duplicate of this bug. ***
Comment 20 Andrea Iacovitti 2017-08-27 08:07:02 UTC
*** Bug 332707 has been marked as a duplicate of this bug. ***