Support SVG too

Konqueror's about page doesn't show icons if the breeze icon theme is
used.
The reason is that khtml doesn't support SVG images.
This patch is supposed to fix it by allowing to use Qt's support in that
case.

BUG: 355872
FIXED-IN: 5.37.0
Differential Revision: https://phabricator.kde.org/D6606